--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: #F4F4F4;
+  background: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -8,6 +8,7 @@
   color: rgba(0,0,0,0.3);
   position: absolute;
   bottom: 0px;
+  width: 100%;
 }
 .footer-links {
   display: flex;
